--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "devDependencies": {
-    "react-scripts": "1.0.14"
+    "enzyme": "^3.1.0",
+    "react-scripts": "1.0.14",
+    "react-test-renderer": "^16.0.0"
   },
   "dependencies": {
     "react": "^16.0.0",
